--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -23,7 +23,7 @@
     <text class="tab-text" wx:else></text>
   </view>
 
-  <view class="tab-item" hover-class="tab-item-hover" catchtab="goMyBooks">
+  <view class="tab-item" hover-class="tab-item-hover" catchtap="goMyBooks">
     <view>
       <image src="../../images/bought.png" mode="aspectFit" class="tab-icon"></image>
       <text class="tab-text">已购</text>
